Cambio de un objetivo y pregunta

--- a/1/planteamiento.tex
+++ b/1/planteamiento.tex
@@ -74,7 +74,7 @@ PG: \newcommand{\ProblemaGeneral}{
 ¿Qué características del conjunto de datos a usar para entrenar y evaluar los modelos son ideales para obtener buenos resultados?
 }
 \newcommand{\Pbtwo}{
-¿De qué forma pueden usarse las técnicas de Deep Learning para clasificar nódulos tiroideos a través de imágenes?
+¿Qué técnicas de preprocesamiento se deberían aplicar a las imágenes de ultrasonido del conjunto de datos?
 }
 \newcommand{\Pbthree}{
 ¿De qué forma se puede evaluar el rendimiento de los modelos de Deep Learning en la clasificación de imágenes de ultrasonido?
@@ -99,7 +99,7 @@ Diseñar un modelo de Deep Learning para el de diagnóstico de nódulos tiroideo
 Determinar las características ideales del conjunto de datos a usar para entrenar y evaluar los modelos.
 }
 \newcommand{\Objtwo}{
-Entender la utilidad de las técnicas de Deep Learning para clasificar nódulos tiroideos.
+Determinar las técnicas de preprocesamiento que se deben aplicar a las imágenes de ultrasonido del conjunto de datos.
 }
 \newcommand{\Objthree}{
 Identificar las métricas de evaluación de rendimiento de los modelos de Deep Learning en la clasificación de imágenes de ultrasonido.
