add new p and o

--- a/1/planteamiento.tex
+++ b/1/planteamiento.tex
@@ -79,12 +79,15 @@ PG: \newcommand{\ProblemaGeneral}{
 \newcommand{\Pbthree}{
 ¿De qué forma se puede evaluar el rendimiento de los modelos de Deep Learning en la clasificación de imágenes de ultrasonido?
 }
-
+\newcommand{\Pbfour}{
+¿Qué arquitecturas de Deep Learning tienen el más alto desempeño en la clasificación de imágenes de ultrasonido de la tiroides?
+}
 
 \begin{itemize}
 	\item PE1: {\Pbone}
 	\item PE2: {\Pbtwo}
 	\item PE3: {\Pbthree}
+	\item PE4: {\Pbfour}
 \end{itemize}
 
 \section{Objetivos de la Investigación}
@@ -104,12 +107,15 @@ Determinar las técnicas de preprocesamiento que se deben aplicar a las imágene
 \newcommand{\Objthree}{
 Identificar las métricas de evaluación de rendimiento de los modelos de Deep Learning en la clasificación de imágenes de ultrasonido.
 }
-
+\newcommand{\Objfour}{
+Determinar las arquitecturas de Deep Learning que tienen el más alto desempeño en la clasificación de imágenes de ultrasondio de la tiroides.
+}
 
 \begin{itemize}
 	\item OE1: {\Objone}
 	\item OE2: {\Objtwo}
 	\item OE3: {\Objthree}
+	\item OE4: {\Objfour}
 \end{itemize}
 
 
