--- a/biblio/references.bib
+++ b/biblio/references.bib
@@ -14,6 +14,62 @@
 
 %%%papers
 %%%%%%%%%
+@article{pr_yang2023novelViTscc,
+	title = {A Novel Vision Transformer Model for Skin Cancer Classification},
+	author = {Yang, Guang and Luo, Suhuai and Greer, Peter},
+	journal = {Neural Processing Letters},	
+	volume={55},
+	number = {7},
+	pages = {9335-9351},
+	year={2023},
+	doi = {10.1007/s11063-023-11204-5}
+}
+
+@article{pr_ayana2023ViTtrasnferLMC,
+	title = {Vision-Transformer-Based Transfer Learning for Mammogram Classification},
+	author = {Ayana, Gelan and Dese, Kokeb and Dereje, Yisak and Kebede, Yonas and Barki, Hika and Amdissa, Dechassa and Husen, Nahimiya and Mulugeta, Fikadu and Habtamu, Bontu and Choe, Se-Woon},
+	journal = {Diagnostics},	
+	volume={13},
+	number = {2},
+	year={2023},
+	doi = {10.3390/diagnostics13020178}
+}
+
+@article{pr_manzari2023MedViTGMIC,
+	title = {MedViT: A robust vision transformer for generalized medical image classification},
+	author = {Manzari, Omid Nejati and Ahmadabadi, Hamid and Kashiani, Hossein and Shokouhi, Shahriar B. and Ayatollahi, Ahmad},
+	journal = {Computers in Biology and Medicine},	
+	volume={157},
+	year={2023},
+	doi = {10.1016/j.compbiomed.2023.106791}
+}
+
+@article{pr_regmi2023ViTChestX-ray,
+	title = {Vision transformer for efficient chest X-ray and gastrointestinal image classification},
+	author = {Regmi, Smriti and Subedi, Aliza and Bagci, Ulas and Jha, Debesh},
+	year={2023},
+	doi = {10.48550/arXiv.2304.11529}
+}
+
+@article{pr_tampu2023diseasedthyOCT,
+	title = {Diseased thyroid tissue classification in OCT images using deep learning: Towards surgical decision support},
+	author = {Tampu, Iulian Emil and Eklund, Anders and Johansson, Kenth and Gimm, Oliver and Haj-Hosseini, Neda},
+	journal = {Journal of Biophotonics},	
+	volume = {16},
+	number = {2},
+	year={2023},
+	doi = {10.1002/jbio.202200227}
+}
+
+@article{pr_JERBI2023autoclassViTGAN,
+	title = {Automatic classification of ultrasound thyroids images using vision transformers and generative adversarial networks},
+	author = {JERBI, Feres and ABOUDI, Noura and KHLIFA, Nawres},
+	journal = {Scientific African},	
+	volume = {20},
+	year={2023},
+	doi = {10.1016/j.sciaf.2023.e01679}
+}
+
 @article{pr_bhatta2021medimage,
 	title = {Deep learning and medical image processing for coronavirus (COVID-19) pandemic: A survey},
 	author = {Bhattacharya, S. and Reddy Maddikunta, P. K. and Pham, Q. V. and Gadekallu, T. R. and Krishnan S, S. R. and Chowdhary, C. L. and Alazab, M. and Jalil Piran, M},
