finish all vit papers

--- a/1/planteamiento.tex
+++ b/1/planteamiento.tex
@@ -108,7 +108,7 @@ Determinar las técnicas de preprocesamiento que se deben aplicar a las imágene
 Identificar las métricas de evaluación de rendimiento de los modelos de Deep Learning en la clasificación de imágenes de ultrasonido.
 }
 \newcommand{\Objfour}{
-Determinar las arquitecturas de Deep Learning que tienen el más alto desempeño en la clasificación de imágenes de ultrasondio de la tiroides.
+Determinar las arquitecturas de Deep Learning que tienen el más alto desempeño en la clasificación de imágenes de ultrasonido de la tiroides.
 }
 
 \begin{itemize}
