--- a/biblio/references.bib
+++ b/biblio/references.bib
@@ -14,6 +14,13 @@
 
 %%%papers
 %%%%%%%%%
+@inproceedings{pr_dosovitskiy2021animageisworth,
+	title = {AN IMAGE IS WORTH 16X16 WORDS: TRANSFORMERS FOR IMAGE RECOGNITION AT SCALE},
+	author = {Dosovitskiy, Alexey and Beyer, Lucas and Kolesnikov, Alexander and Weissenborn, Dirk and Zhai, Xiaohua and Unterthiner, Thomas and Dehghani, Mostafa and Minderer, Matthias and Heigold, Georg and Gelly, Sylvain and Uszkoreit, Jakob and Houlsby, Neil},
+	year = {2021},
+	booktitle = {ICLR 2021 - 9th International Conference on Learning Representations}
+}
+
 @article{pr_yang2023novelViTscc,
 	title = {A Novel Vision Transformer Model for Skin Cancer Classification},
 	author = {Yang, Guang and Luo, Suhuai and Greer, Peter},
