--- a/anexos/anexo.tex
+++ b/anexos/anexo.tex
@@ -41,67 +41,19 @@
 			\tabularnewline \specialrule{.1em}{.05em}{.05em}
 			\centering{Título de la tesis} & \multicolumn{6}{p{15cm}}{Diseño de un modelo de Deep Learning para la clasificación de nódulos tiroideos a través de imágenes de ultrasonido}
 			\tabularnewline \specialrule{.1em}{.05em}{.05em}
-			\Centering{Problema General}& \Centering{Objetivo General} %& \Centering{Hipótesis General}
-			& \Centering{Variables}& \Centering{Dimensiones}& \Centering{Indicadores}& \Centering{Metodología}
-			\\
+			\Centering{Problema General}& \Centering{Objetivo General} & \Centering{Hipótesis General} & \Centering{Variables} & \Centering{Método} \\
 			\specialrule{.1em}{.05em}{.05em}
-			{\ProblemaGeneral} & { \ObjetivoGeneral} %& {\HipotesisGeneral}
-			& \multirow{3}{3cm}[-28ex]{
-				\centering Independiente: Deep Learning
-			}
-			& \multirow{2}{3cm}[-30ex]{
-				\centering ----------------------------
-			}
-			& \multirow{1}{3cm}[-10ex]{
-				\centering Accuracy, recall, precision,
-			}
-			& \multirow{2}{3cm}[3ex]{
-			\setlist{nolistsep}
-			\begin{itemize}[label={--},nosep,noitemsep,leftmargin=*,topsep=0pt,partopsep=0pt]
-				\item Tipo de investigación: ------------.
-				\item Alcance de la investigación: ------------------------------.
-				\item Enfoque de investigación: ----------.
-			\end{itemize}
-			}
-			\\
-			\cline{1-2}
-			\cline{5-5}
-			\Centering{Problemas Específicos}& \Centering{Objetivos Específicos} %& \Centering{Hipótesis Específicas}
-			& 
-			&
-			& \multirow{1}{3cm}[-15ex]{
-				\centering Descripciones, metadatos
-			}
-			& 
-			\\
-			\cline{1-2}
-			\vspace{0pt}{\Pbone} & \vspace{0pt}{\Objone} %& \vspace{0pt}{\Hone} 
-			&  &  &  &
-			\\
-			\cline{1-2}
-			\cline{4-5}
-			\vspace{0pt}{\Pbtwo} & \vspace{0pt}{\Objtwo} %& \vspace{0pt}{\Htwo} 
-			&  & \multirow{2}{3cm}[-5ex]{
-				\centering ---------------------------------
-			} & \multirow{1}{3cm}[-2ex]{
-				\centering Efectividad y uso de las técnicas de Deep Learning
-			} &
-			\\
-			\cline{1-2}
-			\cline{4-5}
-			\vspace{0pt}{\Pbthree} & \vspace{0pt}{\Objthree} %& \vspace{0pt}{\Hthree}
-			& \multirow{2}{3cm}[0ex]{
-				\centering Dependiente: Nódulos tiroideos
-			} 
-			& \multirow{1}{3cm}[-11ex]{
-				\centering -----------------
-			}
-			& \multirow{1}{3cm}[-7ex]{
-				\centering Descripciones y usos de las métricas
-			}
-			& 
-			\\
-			
+			{\ProblemaGeneral} & { \ObjetivoGeneral} & {\HipotesisGeneral} \\
+			\cline{1-3}
+			\Centering {Problemas Específicos} & \Centering {Objetivos Específicos} & \Centering {Hipótesis Específicas} \\ %& \Centering {Variables} & \Centering {Método} \\
+			\cline{1-3}
+			{\Pbone} & {\Objone} & {\Hone} & \multirow{6}{*}{{Dependiente: Diagnóstico de nódulos tiroideos Independiente: Modelo de Deep Learning}} & \multirow{6}{*}{{Tipo de Investigación: Experimental. Alcance de la investigación: Explicativo}} \\
+			\cline{1-3}
+			{\Pbtwo} & {\Objtwo} & {\Htwo} \\ % & {aa } & {aa } \\
+			\cline{1-3}
+			{\Pbthree} & {\Objthree} & {\Hthree} \\ % & { aa} & {aa } \\
+			\cline{1-3}
+			{\Pbfour} & {\Objfour} & {\Hfour} \\ % & { aa} & { aa} \\
 			\specialrule{.1em}{.05em}{.05em}
 		\end{longtable}
 	\end{landscape}
