--- a/anexos/anexo.tex
+++ b/anexos/anexo.tex
@@ -47,7 +47,15 @@
 			\cline{1-3}
 			\Centering {Problemas Específicos} & \Centering {Objetivos Específicos} & \Centering {Hipótesis Específicas} \\ %& \Centering {Variables} & \Centering {Método} \\
 			\cline{1-3}
-			{\Pbone} & {\Objone} & {\Hone} & \multirow{6}{*}{{Dependiente: Diagnóstico de nódulos tiroideos Independiente: Modelo de Deep Learning}} & \multirow{6}{*}{{Tipo de Investigación: Experimental. Alcance de la investigación: Explicativo}} \\
+			{\Pbone} & {\Objone} & {\Hone} & \multirow{6}{3cm}{
+				
+				\centering Dependiente: Diagnóstico de nódulos tiroideos Independiente: Modelo de Deep Learning
+
+			} & \multirow{6}{3cm}{
+				
+				\centering Tipo de Investigación: Experimental. Alcance de la investigación: Explicativo
+			
+			} \\
 			\cline{1-3}
 			{\Pbtwo} & {\Objtwo} & {\Htwo} \\ % & {aa } & {aa } \\
 			\cline{1-3}
