--- a/2/3_conceptos/marc_conceptual.tex
+++ b/2/3_conceptos/marc_conceptual.tex
@@ -44,7 +44,39 @@ A continuación, se presenta el enfoque tradicional del Machine Learning.
 \subsection{Ecografía y las imágenes de ultrasonido}
 Según \cite{pr_herrera2017diseimp}, la ecografía, que es una técnica de diagnóstico en donde se usan imágenes generadas por ultrasonido, es comúnmente desarrollado en las áreas de cardiología, ginecología, y otras más relacionadas. La popularidad de esta técnica se basa en la capacidad de las imágenes de alta calidad que se obtienen de este proceso, además de no ser un método invasivo o de radiación como muchos otros de su tipo.
 
+\subsection{Transfer Learning}
+\cite{bk_geron2022handml} nos menciona que el transfer learning o transferencia de aprendizaje es un técnica usada en el campo de Deep Learning que permite el uso de algunas capas de un modelo ya definido y entrenado previamente en un nuevo modelo que necesite ser entrenado en una tarea similar al que se desarrolla el modelo original. Las capas destinadas al reuso son normalmente las más cercanas a la entrada o también conocidas como capas inferiores. El beneficio de usar esta técnica radica en dos puntos importantes: cantidad de datos requeridos y velocidad de entrenamiento del modelo; es decir, la cantidad de datos que se deben usar para entrenar un modelo de alto desempeño se reduce considerablemente, mientras que el tiempo requerido para terminar este proceso es menor comparándolo a si lo entrenaran desde cero.
+
+Para que esta técnica funcione debidamente, las capas más cercanas a la salida, conocidas también como capas de alto nivel, deben ser reemplazadas, esto debido a que son más específicas de las tareas del modelo original. Esto también incluye a la capa final, ya que posiblemente no tenga la cantidad de salidas necesarias para completar satisfactoriamente la nueva tarea.
+
+A continuación se presenta de forma gráfica la técnica.
+
+\begin{figure}[H]
+	\begin{center}
+		\includegraphics[width=1.00\textwidth]{2/figures/transfer_learning.PNG}
+		\caption[Ejemplo de transfer learning]{Ejemplo de transfer learning. \\
+		Fuente: \cite{bk_geron2022handml}. \textit{Hands-on machine learning with Scikit-Learn, Keras, and TensorFlow}.}
+		\label{2:fig210}
+	\end{center}
+\end{figure}
 
 
+\subsection{Data Augmentation}
 
+Según \cite{bk_geron2022handml} el aumento de datos o data augmentation es una técnica de regularización que permite reforzar la cantidad de muestras en un conjunto de datos. Esto se realiza a través de la generación de nuevas instancias similares a los originales; es decir, las personas no deberían ser capaces de diferenciar una imagen generada de una del propio conjunto de datos.
+
+Para generar estas nuevas muestras, normalmente se aplican diferentes transformaciones a las instancias del conjunto de datos original. Estas transformaciones pueden ser; por ejemplo, una simple rotación o recorte de la imagen, siempre y cuando no altere por completo su sentido como es el caso de voltear una imagen de texto de forma horizontal. 
+
+El principal beneficio de esta técnica es que permite reducir el sobreajuste de los modelos entrenados. 
+
+En la siguiente imagen se muestran algunas transformaciones que se pueden hacer al aplicar el aumento de datos. 
+
+\begin{figure}[H]
+	\begin{center}
+		\includegraphics[width=1.00\textwidth]{2/figures/data_aug.PNG}
+		\caption[Ejemplo de data augmentation]{Ejemplo de data augmentation. \\
+		Fuente: \cite{bk_geron2022handml}. \textit{Hands-on machine learning with Scikit-Learn, Keras, and TensorFlow}.}
+		\label{2:fig211}
+	\end{center}
+\end{figure}
 
