--- a/tesis.tex
+++ b/tesis.tex
@@ -380,9 +380,9 @@ pdfauthor={autor nombres}]{hyperref}
 \input{1/planteamiento}
 \input{2/marco}
 \input{3/metodologia}
-\input{4/desarrollo}
-\input{5/resultados}
-\input{6/conclusion}
+%\input{4/desarrollo}
+%\input{5/resultados}
+%\input{6/conclusion}
 % %%Bibliografia
 %\bibliographystyle{apalike} % No funciona
 %\renewcommand{\bibname}{BIBLIOGRAFÍA} % changes the header; default: Bibliography
