--- a/anexos/anexo.tex
+++ b/anexos/anexo.tex
@@ -13,7 +13,7 @@
 	\label{anexo1}
 	\begin{figure}[h]
 		\begin{center}
-			\includegraphics[width=1.05\textwidth]{anexos/arbol_problemas.png}
+			\includegraphics[width=1.05\textwidth]{anexos/arb_problemas.jpg}
 			%\caption{Fuente: Elaboración propia}
 		\end{center}
 	\end{figure}
@@ -26,7 +26,7 @@
 	\label{anexo2}
 	\begin{figure}[h]
 		\begin{center}
-			\includegraphics[width=1.05\textwidth]{anexos/arbol_objetivos.png}
+			\includegraphics[width=1.05\textwidth]{anexos/arb_objetivos.jpg}
 			%\caption{Fuente: Elaboración propia}
 		\end{center}
 	\end{figure}
